<resources>
    <string name="app_name">BioTasP</string>
    <string name="action_settings">Settings</string>
    <string-array name="nav_drawer_items">
        <item >Inicio</item>
        <item >Actividades</item>
        <item >Sincronizar</item>
        <item >Acerca de...</item>
    </string-array>
    <string name="about">Acerca de</string>
    <string name="tvc_">TVC</string>
    <string name="its_">ITS</string>
    <string name="action_websearch">Web search</string>
    <string name="main_title">Registro de nueva intervención</string>
    <string name="main_huella">Registrar Huella</string>
    <string name="main_guardar">Guardar registro</string>
    <string name="main_test">Llenar cuestionario</string>
    <string name="hint_nombre">Ingrese nombre</string>
    <string name="hint_apellido">Ingrese apellido</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_fechanac">Fecha de nacimiento</string>
    <string name="elegir_opcion">Elija una opción</string>
    <string name="txt_test">HOLA TEST!</string>
    <string name="test">Test!</string>
    <string name="cancel">Cancelar</string>
    <string name="ccc">Actividad CCC</string>
    <string name="tvc">TVC / ITS</string>
    <string name="acomp">Acompañamiento</string>
    <string name="elegir_actividad">Elija actividad a crear</string>
    <string name="registro_actividad">Registro de actividad</string>
    <string-array name="tipo_actividad">
        <item>Juegos lúdicos</item>
        <item>Abordaje cara a cara</item>
        <item>Visitas de campo</item>
        <item>Charla</item>
        <item>Taller</item>
        <item>Kiosko</item>
        <item>Grupos de autoapoyo</item>
        <item>Visitas domiciliares</item>
        <item>Ferias de salud</item>
        <item>Espacios seguros e interactivos</item>
        <item>Entrevistas</item>
        <item>Jornadas educativas</item>
        <item>Demostraciones de uso del condón</item>
        <item>Otros</item>
        <item>TVC</item>
        <item>Diagnóstico y tratamiento de ITS</item>
        <item>Encuentro</item>
        <item>Distribución de condones a PVV en UAI</item>
        <item>Conmemoraciones</item>
        <item>Caminatas</item>
        <item>Pacientes con ARV</item>
        <item>Pacientes profilaxis cotrimoxazole</item>
        <item>Pacientes diagnosticados y tratados IO</item>
        <item>Embarazadas con ARV</item>
        <item>TVC embarazadas</item>
        <item>TVC nucleos familiares</item>
        <item>Foro</item>
    </string-array>
    <string name="tema_actividad">Tema de Actividad</string>
    <string name="educador_actividad">Educador</string>
    <string name="grupo_actividad">Grupo</string>
    <string name="pick_date">Elija Fecha</string>
    <string name="fecha_actividad">Elija Fecha</string>
    <string name="hint_fecha">13/02/2014</string>
    <string name="lugar_actividad">Lugar de la actividad</string>
    <string name="hint_lugar">Ej. Parque Central</string>
    <string name="msg_1">Objetivo 1</string>
    <string name="msg_4">Objetivo 4</string>
    <string name="msg_recommendation">Recomendación</string>
    <string name="hint_condones">Condones Demo</string>
    <string name="hint_observaciones">Escriba aquí las observaciones</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="datos_actividad">Crear Nueva Actividad</string>
    <string name="condones_demo">Condones demo</string>
    <string name="condones">Condones</string>
    <string name="condones_masculino">Condones Masculino</string>
    <string name="condones_femenino">Condones Femenino</string>
    <string name="lubricantes">Lubricantes</string>
    <string name="lubricantes_sachet">Lubricantes Sachet</string>
    <string name="lubricantes_tubo">Lubricantes Tubo</string>
    <string name="titulo_test">Test de conocimientos</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="serial_number">s/n</string>
    <string name="back">CONTINUAR -\u003E</string>
    <string name="title_activity_capture_fingerprint">CaptureFingerprintActivity</string>
    <string name="get_reader">Abrir Lector</string>
    <string name="capture_fingerprint">Leer huella</string>
    <string name="title_activity_get_reader">GetReaderActivity</string>
    <string name="user_login">Ingreso de usuario</string>
    <string name="ingrese_usuario">Usuario</string>
    <string name="ingrese_password">Contraseña</string>
    <string name="ingreso_boton">Ingreso</string>
    <string name="impresos">Impresos entregados</string>
    <string name="referencia_vih">Pasa a TVC</string>
    <string name="referencia_its">Pasa a ITS</string>
    <string name="tratado_its">Tratado</string>
    <string name="tratado_its_fm">Tratado FM</string>
    <string name="referido_its">Referido</string>
    <string name="consentimiento">Hoja de consentimiento</string>
    <string name="consentimiento_acepta">¿Puedo entonces hacerte las preguntas?</string>
    <string name="modificar_actividad">Modificar actividad</string>
    <string name="elija_actividad">Actividades</string>
    <string name="hora_actividad">Elija Hora</string>
    <string name="codactiv">Código de Actividad</string>
    <string name="action_sign_in_register">Iniciar Sesión</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">OTRA ACCION</string>
    <string name="login_progress_signing_in">Mensaje inicio sesion</string>
    <string name="sync">Sincronizando</string>
    <string name="pregunta_1">1.- ¿Conoces que es una infección de transmisión sexual?</string>
    <string name="pregunta_2">2.- ¿Cuáles consideras que sean algunas señales que presenta una persona que tiene VIH?</string>
    <string name="pregunta_2a">Pérdida de peso mayor de 10%</string>
    <string name="pregunta_2b">Diarrea repetidas</string>
    <string name="pregunta_2c">Tos seca persistente</string>
    <string name="pregunta_2d">Sudores nocturnos</string>
    <string name="pregunta_2e">Cansancio</string>
    <string name="pregunta_3">3.- ¿Ingieres bebidas alcohólicas? Si tu respuesta es sí, ¿Con qué frecuencia?</string>
    <string name="pregunta_3a">Diario</string>
    <string name="pregunta_3b">Cada fin de semana</string>
    <string name="pregunta_3c">Ocasionalmente</string>
    <string name="pregunta_3d">Socialmente</string>
    <string name="pregunta_3e">Nunca</string>
    <string name="pregunta_4">4.- Cuándo ingieres bebidas alcohólicas, ¿Con quién lo haces?</string>
    <string name="pregunta_4a">Amigos</string>
    <string name="pregunta_4b">Otros chicos en tu grupo</string>
    <string name="pregunta_4c">Familiares</string>
    <string name="pregunta_4d">Parejas ocasionales</string>
    <string name="pregunta_4e">Pareja estable</string>
    <string name="pregunta_4f">Desconocidos</string>
    <string name="pregunta_5">5.- ¿Te han discriminado alguna vez? Si tu respuesta es sí, ¿Cómo te has sentido?</string>
    <string name="pregunta_5a">Triste</string>
    <string name="pregunta_5b">Ofendido</string>
    <string name="pregunta_5c">Enojado</string>
    <string name="pregunta_5d">Violento</string>
    <string name="pregunta_5e">Busco Golpear a cualquier otra persona</string>
    <string name="pregunta_6">6.- ¿En quién te refugias cuando tienes problemas personales o con tu pareja?</string>
    <string name="pregunta_6a">Amigos</string>
    <string name="pregunta_6b">Familia</string>
    <string name="pregunta_6c">Religión</string>
    <string name="pregunta_6d">Alcohol</string>
    <string name="pregunta_6e">Nadie</string>
    <string name="pregunta_7">7.- Aproximadamente, ¿Cuantas relaciones sexogenitales tienes al mes?</string>
    <string name="pregunta_7a">1-3</string>
    <string name="pregunta_7b">4-6</string>
    <string name="pregunta_7c">7-9</string>
    <string name="pregunta_7d">10 o más</string>
    <string name="pregunta_8">8.- ¿Con quién sostienes estas relaciones sexogenitales?</string>
    <string name="pregunta_8a">Pareja estable</string>
    <string name="pregunta_8b">Parejas ocasionales</string>
    <string name="pregunta_8c">Amigos</string>
    <string name="pregunta_8d">Desconocidos</string>
    <string name="pregunta_8e">Otros</string>
    <string name="pregunta_9">9.- ¿Con qué frecuencia utilizas correctamente el condón en tus relaciones sexogenitales?</string>
    <string name="pregunta_9a">Algunas veces</string>
    <string name="pregunta_9b">Siempre</string>
    <string name="pregunta_9c">Nunca</string>
    <string name="pregunta_10">10.- ¿Consideras haber estado en riesgo de infectarte de ITS/VIH?</string>
    <string name="pregunta_10a"> - Medidas que conoces para reducir el riesgo - </string>
    <string name="pregunta_10b">Reducir las barreras y riesgos de infección</string>
    <string name="pregunta_10c">Discutir estrategias para reducir estigma y discriminación</string>
    <string name="pregunta_10d">Uso correcto y constante de condones</string>
    <string name="pregunta_10e">Diagnostico y tratamiento de ITS cuando hay molestias</string>
    <string name="pregunta_10f">Realizarse la prueba de VIH cada 6 meses</string>
    <string name="pregunta_10g">Otros</string>
    <string name="pregunta_100">1.- ¿Puede reducirse el riesgo de transmisión del VIH manteniendo relaciones sexuales con una única pareja fiel y no infectada?</string>
    <string name="pregunta_200">2.- ¿Puede reducirse el riesgo de transmisión del VIH usando preservativos cada vez que se mantienen relaciones sexuales?</string>
    <string name="pregunta_300">3.- ¿Puede una persona de aspecto saludable tener el VIH?</string>
    <string name="pregunta_400">4.- ¿Se puede contraer el VIH por picaduras de mosquito?</string>
    <string name="pregunta_500">5.- ¿Se puede contraer el VIH por compartir alimentos con una persona infectada?</string>
    <string name="open_activity">Existe una actividad que no ha sido cerrada</string>
    <string name="titulo_encuesta">CUESTIONARIO PARA EVALUAR LA CALIDAD DE VIDA DE LAS PV</string>
    <string name="subtitulo_1_encuesta">1.	En cada una de las siguientes preguntas, señale las respuestas que más se adecue al modo en que ha se ha sentido durante los últimos días</string>
    <string name="grupo_1">ANSIEDAD</string>
    <string name="txt_pregunta11">¿Ha estado muy nervioso/a?</string>
    <string name="txt_pregunta12">¿Se ha sentido tranquilo, en calma y en paz?</string>
    <string name="txt_pregunta13">¿Se ha sentido abrumado o desesperado?</string>
    <string name="grupo_2">DEPRESION</string>
    <string name="txt_pregunta21">¿Se ha sentido triste y decaído?</string>
    <string name="txt_pregunta22">¿Ha tomado alcohol para olvidar problemas?</string>
    <string name="txt_pregunta23">¿Llora y/o se siente irritable o enojado?</string>
    <string name="grupo_3">ESTRES</string>
    <string name="txt_pregunta31">¿Se ha sentido agotado o cansado?</string>
    <string name="txt_pregunta32">¿Se le olvidan cosas que han sucedido recientemente, como donde dejo cosas, citas, etc.?</string>
    <string name="txt_pregunta33">¿Se ha sentido con energía como para hacer las cosas que quería hacer?</string>
    <string name="grupo_4">AUTOESTIMA</string>
    <string name="txt_pregunta41">¿Se ha sentido discriminado por parte de su familia?</string>
    <string name="txt_pregunta42">¿Se ha sentido discriminado por parte de amigos u otras personas?</string>
    <string name="txt_pregunta43">¿Se ha sentido apoyado por parte de su familia u otras personas?</string>
    <string name="activity_name_title">Actividad</string>
    <string name="activity_date_title">Fecha</string>
    <string name="pacient_code_hint">Ingrese el Código del Paciente</string>
    <string name="observations_hint">Observaciones</string>
    <string name="amount_hint">Cantidad</string>
</resources>