<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:background="@color/primary"
            android:textColor="@color/list_divider"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/registro_actividad"/>

    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
        
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="match_parent"
	            
        	    android:text="@string/tipo_actividad"
        	    android:layout_weight="1"
        	    />
        
            <Spinner
                android:id="@+id/spinner_tipo_actividad"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:drawSelectorOnTop="true"
                android:entries="@array/tipo_actividad" 
                />
        
    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
        
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="match_parent"
	            
        	    android:text="@string/tema_actividad"
        	    android:layout_weight="1"
        	    />
        
            <Spinner
                android:id="@+id/spinner_temas"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:drawSelectorOnTop="true"
                android:entries="@array/temas" 
                />
    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
        
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="match_parent"
	            
        	    android:text="@string/educador_actividad"
        	    android:layout_weight="1"
        	    />
        
            <Spinner
                android:id="@+id/spinner_educadores"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:drawSelectorOnTop="true"
                android:entries="@array/educadores" 
                />
    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
        
        	<TextView
        	    android:layout_width="wrap_content"
        	    android:layout_height="match_parent"
	            
        	    android:text="@string/grupo_actividad"
        	    android:layout_weight="1"
        	    />
        
            <Spinner
                android:id="@+id/spinner_grupos"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:drawSelectorOnTop="true"
                android:entries="@array/grupos" 
                />
    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            
	         <TextView
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_weight="0.73"
	             android:text="@string/fecha_actividad" />
	         
	         <EditText
	            android:id="@+id/txt_nombre"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:hint="@string/hint_fecha"
	            android:inputType="textPersonName"
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:layout_margin="15dp"/>
            
    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >
            
	         <TextView
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_weight="0.73"
	             android:text="@string/lugar_actividad" />
	         
	         <EditText
	            android:id="@+id/txt_lugar"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:hint="@string/hint_lugar"
	            android:inputType="textPersonName"
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:layout_margin="15dp"/>
            
    </LinearLayout>
    
    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
	    <ToggleButton	            
		            android:id="@+id/toggle_recommendation"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:textOn="@string/msg_1"
		            android:textOff="@string/msg_4"	
		                        
		            android:text="@string/msg_recommendation"/>
	    
	   <EditText
	            android:id="@+id/txt_condones"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:hint="@string/hint_condones"
	            android:inputType="textPersonName"
	            android:textAppearance="?android:attr/textAppearanceLarge" 
	            android:layout_margin="15dp"/>
   	</LinearLayout>


    <LinearLayout 
        	android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">
        
        	<EditText
	            android:id="@+id/txt_observaciones"
	            android:layout_width="fill_parent"
	            android:layout_height="90dp"
                android:inputType="textMultiLine"
	            android:hint="@string/hint_observaciones"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_margin="15dp"/>

    </LinearLayout>
</LinearLayout>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="18dp">

        <Button
            android:layout_gravity="bottom|end"
            android:background="@drawable/floating_button_save_normal"
            android:textColor="@color/list_divider"
            android:drawSelectorOnTop="true"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_save_data_insumos" />

    </FrameLayout>
</RelativeLayout>