<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        	  android:id="@+id/serial_number"
        	  android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/serial_number"
    		  android:padding="10dp" />
    
    <Button
        android:id="@+id/get_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_reader" />


    <Button
        android:id="@+id/capture_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capture_fingerprint" 
        android:visibility="invisible"/>
    
    <Button
        android:id="@+id/enrollment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Registrar Huella" />

</LinearLayout>
</ScrollView>