<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/consentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary">

        <TextView
            android:id="@+id/txt_title"
            android:text="@string/consentimiento"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:textColor="@color/list_divider"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
    <TextView
        android:id="@+id/txt_consent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textColor="@color/list_divider"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/consentLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp" >
    
     <TextView
        android:id="@+id/txt_consent_accept"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/consentimiento_acepta"
        android:textStyle="bold"
         android:gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_consent_si"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_dark"
        android:textColor="@color/list_divider"
        android:paddingLeft="150dp"
        android:paddingRight="150dp"
        android:text="@string/si" />
    
    <Button
        android:id="@+id/btn_consent_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/primary_dark"
        android:textColor="@color/list_divider"
        android:paddingLeft="150dp"
        android:paddingRight="150dp"
        android:layout_weight="1"
        android:text="@string/no" />
    
    </LinearLayout>

</LinearLayout>
