<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <FrameLayout 
	        android:id="@+id/start_content"
	    	android:layout_width="match_parent"
	    	android:layout_height="match_parent">
	    	
        	<LinearLayout
		        android:id="@+id/linearLayout1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" >
		        
		    <TextView
		            android:id="@+id/txt_title"
		            android:text="@string/elegir_actividad"
		            style="@style/Titulos"/>
		        
		        <View
				    style="@style/Linea_titulo"/>
		    
		    <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="15dp"
		            android:orientation="horizontal" >
					
		            <Button 
		                android:id="@+id/btn_ccc"
		                android:layout_width="0dp"
		                android:layout_height="match_parent"
		                android:layout_weight="1"
		                android:drawSelectorOnTop="true"
		                android:text="@string/ccc"
		                android:layout_marginTop="10dp" />
		            
		        </LinearLayout>
		        
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="15dp"
		            android:orientation="horizontal" >
					
		            <Button 
		                android:id="@+id/btn_tvc"
		                android:layout_width="0dp"
		                android:layout_height="match_parent"
		                android:layout_weight="1"
		                android:drawSelectorOnTop="true"
		                android:text="@string/tvc"
		                android:layout_marginTop="10dp" />
		            
		        </LinearLayout>
		        
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="15dp"
		            android:orientation="horizontal" >
					
		            <Button 
		                android:id="@+id/btn_acomp"
		                android:layout_width="0dp"
		                android:layout_height="match_parent"
		                android:layout_weight="1"
		                android:drawSelectorOnTop="true"
		                android:text="@string/acomp"
		                android:layout_marginTop="10dp" />
		            
		        </LinearLayout>
		        
		    </LinearLayout>
        
        
	</FrameLayout>
    
    
</LinearLayout>
